Sidebar collapsed is correct dimensions.

--- a/_sass/_jekyll-theme-minimal.scss
+++ b/_sass/_jekyll-theme-minimal.scss
@@ -80,7 +80,7 @@ body {
   left: var(--sidebar-offset);
   bottom: var(--sidebar-offset);
   width: var(--sidebar-width-collapsed);
-  height: calc(var(--button-size) + 2rem); 
+  height: calc(var(--button-size) + 54rem); 
   transition: all 0.3s ease-in-out;
   background-color: var(--bg-accent);
   padding: 1rem 0;
